@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.48 2022/12/03 15:34:30 reinoud Exp $
+# $NetBSD: Makefile,v 1.49 2024/10/14 14:31:33 reinoud Exp $
 # 
 
-DISTNAME=		UDFclient.0.8.20
-PKGNAME=		udfclient-0.8.20
+DISTNAME=		UDFclient.0.8.21
+PKGNAME=		udfclient-0.8.21
 CATEGORIES=		misc
 MASTER_SITES=		http://www.13thmonkey.org/udfclient/releases/
 EXTRACT_SUFX=		.tgz
