@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.47 2022/12/03 15:34:30 reinoud Exp $
+$NetBSD: distinfo,v 1.48 2024/10/14 14:31:33 reinoud Exp $
 
-BLAKE2s (UDFclient.0.8.20.tgz) = d253925747aca6f8549c1c2326074c8993a70298cc7c9c3b438e3934d8d0506c
-SHA512 (UDFclient.0.8.20.tgz) = f48b1f0f1248d581a8431e0ad425a1b17ad90eb49c263514fd1a05ea8c05619b7cbddf06d0d1ed05f11ec65b49c6d7b1b2ebb07591b9246dff4f6a501ae4e5a9
-Size (UDFclient.0.8.20.tgz) = 257392 bytes
+BLAKE2s (UDFclient.0.8.21.tgz) = b12c6b43a8c10216858b777f3e076772f3f3bc3220d307469648eea290d24059
+SHA512 (UDFclient.0.8.21.tgz) = 89ce0b3cd98c94ddfec63be316085c345faf996883ad5c664e34c3b83e2ce5bf2930c6890485193156d2f9084a292820852a6d69dc9a5468489cf9bbbe437f97
+Size (UDFclient.0.8.21.tgz) = 256924 bytes
